FINAL CHANGES. PROJECT FINISHED! Signed-off-by: reevo <runt17@gmail.com>

--- a/Projects/Project V 5/blackjack.html
+++ b/Projects/Project V 5/blackjack.html
@@ -358,7 +358,7 @@ function checkValues(player, dealer, nDeck){
 
 //RUNS WHEN PAGE LOADS
 function game(nDeck) {
-	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, when you throw your money at us, we will give you the full game which includes features such as HI DEFINITION GRAPHICS AND DYNAMIC AI THAT WE HAVE NO IDEA WHO TO PROGRAM!!! Please enjoy! :) ~A.S 'Reevo'" );
+	alert( "THIS IS A TRIAL!Thank you trying out our BlackJack Deluks computer game! This is a game trial, when you throw your money at us, we will give you the full game which includes features such as HI DEFINITION GRAPHICS AND DYNAMIC AI THAT WE HAVE NO IDEA HOW TO PROGRAM!!! Please enjoy! :) ~A.S 'Reevo'" );
 		writeMessage("-----------------THE SCRIPT HAS STARTED-----------------");
 		console.log("Turn # is"+turn);
 		newGame(player, dealer, nDeck);
